Change flag Moldovane

--- a/flag.html
+++ b/flag.html
@@ -18,7 +18,7 @@
 <div class="col-xs-2">
 	<img  class="img-responsive flag" src="china_flag.gif">
    	<a href="nepal_flag.gif" class="btn btn-primary" onclick="alert('no'); return false;">Nepal</a> 
-    <a href="moldova_flag.gif" class="btn btn-primary" onclick="alert('no'); return false;">Moldova</a>
+    <a href="moldova_flag.gif" class="btn btn-primary" onclick="alert('no'); return false;">Moldovane</a>
     <a href="china_flag.gif" class="btn btn-primary" onclick="alert('yes'); return false;">China</a>
     <a href="ukraina_flag.gif" class="btn btn-primary" onclick="alert('no'); return false;">Ukraina</a>
     <a href="germany_flag.gif" class="btn btn-primary" onclick="alert('no'); return false;">Germany</a>
